fixed issue where the bottom highlights were not overlapping

--- a/css/utils.css
+++ b/css/utils.css
@@ -1,8 +1,26 @@
+html {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*,
+*:before,
+*:after {
+  -webkit-box-sizing: inherit;
+  -moz-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+/* * {
+  outline: 1px dotted pink;
+} */
+
 body {
   font-size: 16px;
 }
 
-.clrfix:after {
+.clearfix:after {
   content: "";
   display: table;
   clear: both;
